--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     color: white;
     padding: 30px 0;
     text-align: center;
-    border-bottom: 10px solid #ff4081;
+    border-bottom: 10px solid hsl(180, 23%, 97%);
   }
   
   .year-selection select {
@@ -210,3 +210,9 @@ body {
     background-color: #f50057;
   }
   
+
+  footer{
+    background-color: lavender;
+    text-align: center;
+    padding: 1rem 1rem;
+  }
